--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
   </main>
 
   
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.frontendmentor.io/profile/kushyzee">Kushyzee</a>.
-  </div>
+  </footer>
 </body>
 </html>
